--- a/effect6.html
+++ b/effect6.html
@@ -11,8 +11,8 @@
 	</div>
 	<div class="back">
 		<div class="back-content">
-			<h2>Wonderful Graphics</h2>
-			<p>This is a wonderful project</p>
+			<h2>Product Name</h2>
+			<p>discruption</p>
 		</div>
 	</div>
 </div>
@@ -23,8 +23,8 @@
 	</div>
 	<div class="back1">
 		<div class="back-content">
-			<h2>Hover Effect2</h2>
-			<p>This is a wonderful project</p>
+			<h2>Product Name</h2>
+			<p>discruption</p>
 		</div>
 	</div>
 </div>
@@ -35,8 +35,8 @@
 	</div>
 	<div class="back2">
 		<div class="back-content">
-			<h2>Hover Effect3</h2>
-			<p>This is a wonderful project</p>
+			<h2>Product Name</h2>
+			<p>discruption</p>
 		</div>
 	</div>
 </div>
@@ -47,8 +47,8 @@
 	</div>
 	<div class="back4">
 		<div class="back-content">
-			<h2>Hover Effect4</h2>
-			<p>This is a wonderful project</p>
+			<h2>Product Name</h2>
+			<p>discruption</p>
 		</div>
 	</div>
 </div>
@@ -59,8 +59,8 @@
 	</div>
 	<div class="back5">
 		<div class="back-content">
-			<h2>Hover Effect5</h2>
-			<p>This is a wonderful project</p>
+			<h2>Product Name</h2>
+			<p>discruption</p>
 		</div>
 	</div>
 </div>
@@ -71,8 +71,8 @@
 	</div>
 	<div class="back6">
 		<div class="back-content">
-			<h2>Hover Effect5</h2>
-			<p>This is a wonderful project</p>
+			<h2>Product Name</h2>
+			<p>discruption</p>
 		</div>
 	</div>
 </div>
